2005-01-10 Chenthill Palanisamy <pchenthill@novell.com>

	* e-send-options.c: (e_send_options_get_widgets_data),
	(e_send_options_fill_widgets_with_data), (page_changed_cb),
	(init_widgets), (get_widgets), (setup_widgets),
	(e_sendoptions_set_global), (e_sendoptions_dialog_run),
	(e_sendoptions_dialog_finalize), (e_sendoptions_dialog_dispose),
	(e_sendoptions_dialog_init), (e_sendoptions_dialog_class_init),
	(e_sendoptions_dialog_get_type): Added code to support global options.
	Filled the finalize and dispose functions.
	* e-send-options.glade: Changed a label id.
	* e-send-options.h: Added the set_global function.

2005-01-06  JP Rosevear  <jpr@novell.com>

	* Makefile.am: dist the glade file

2005-01-06 Chenthill Palanisamy <pchenthill@novell.com>
	
	Commiting the files mentioned below again to HEAD since it 
	was not added in head. 

2005-01-06 Chenthill Palanisamy <pchenthill@novell.com>
	
	merging send options
	* Makefile.am:
	* e-send-options.[ch]: Widgets for the send options dialog
	* e-send-options.glade:	Contains interface for the dialog

2005-01-04  Harry Lu  <harry.lu@sun.com>

	* misc/e-combo-button.c: (e_combo_button_popup): new internal function
	to popup the menu.
	(impl_button_press_event): call the new function.
	(e_combo_button_class_init): init a11y.
	(e_combo_button_get_label): new function to return label.
	(e_combo_button_popup_menu): new function to popup menu.
	* misc/e-combo-button.h: add function declarations.

2004-12-17  Not Zed  <NotZed@Ximian.com>

	* e-error.c (ee_load, e_error_newv): translate strings based on
	translation-domain, if supplied.

2004-12-14  Rodney Dawes  <dobey@novell.com>

	* e-calendar-item.c (e_calendar_item_draw): Use gtk_paint_foo instead
	of the deprecated gtk_draw_foo functions
	(e_calendar_item_get_day_style): Use colors from the theme for the
	background and foreground of various items
	
	* test-calendar.c (main): Don't set a callback for getting the day